--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==2.0.11
 Django==2.2.17
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
+googlemaps==4.6.0
 idna==3.3
 pytz==2021.3
 requests==2.27.1
